<resources>
    <string name="app_name">Phumlani Dube Foundation Mobile Application</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="join_us">JOIN US</string>
    <string name="username">Username</string>
    <string name="enter_your_username">Enter your username</string>
    <string name="email_phone">Email/Phone</string>
    <string name="enter_your_email_or_phone_number">Enter your email or phone number</string>
    <string name="password">Password</string>
    <string name="enter_your_password">Enter your password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="confirm_your_password">Confirm your password</string>
    <string name="i_agree_to_the_terms_and_conditions">I agree to the Terms and Conditions</string>
    <string name="already_have_an_account_login">Already have an account? Login</string>
    <string name="login">LOGIN</string>
    <string name="forgot_your_password">Forgot your password? Use Email to reset</string>
    <string name="don_t_have_an_account_register">Don\'t have an account? Register</string>
    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="enter_new_password">Enter new password</string>
</resources>